[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/play_panel.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/panels/play_panel.png" type="Texture" id=2]
[ext_resource path="res://scenes/big_button.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open_panel"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("core:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -923.307 ), Vector2( 0, 96.2958 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="play_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
pnl_clr = Color( 0.0745098, 0.917647, 0.760784, 1 )
buttons = [ NodePath("core/continue"), NodePath("core/new_game") ]

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="core" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1377.08, -2.50107 )

[node name="back" type="Button" parent="core"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="panel_img" type="TextureRect" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -279.5
margin_right = 282.0
margin_bottom = 279.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="continue" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = -42.5208
margin_right = 244.0
margin_bottom = 76.4792
button_name = "Continue"
fixed_highlight = false

[node name="new_game" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = 97.4792
margin_right = 244.0
margin_bottom = 216.479
button_name = "New Game"
highlight = true

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/open_panel = SubResource( 1 )
[connection signal="pressed" from="core/back" to="." method="close_panel"]
[connection signal="pressed" from="core/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="core/new_game" to="." method="_on_new_game_pressed"]
